Fixed FF Popup Overflow, added disable css

--- a/app/styles/popup.css
+++ b/app/styles/popup.css
@@ -1,11 +1,14 @@
+html,
+body {
+  overflow: hidden;
+}
 body {
   align-items: stretch;
   background: #fafafa;
-  border-radius: 20px;
-  box-sizing: content-box;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  height: 30rem;
+  height: 35rem;
   margin: 0 auto;
   position: relative;
   width: 20rem;
@@ -23,6 +26,11 @@ body {
   background: #1c1c1c;
 }
 
+.disable {
+  pointer-events: none !important;
+  opacity: 0.7;
+}
+
 .main {
   position: relative;
   width: 100%;
@@ -34,10 +42,6 @@ body {
   height: 100%;
   width: 100%;
   box-sizing: border-box;
-}
-
-#score-container {
-  margin-top: -15px;
 }
 
 #siteinfo-container {
